<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/kcab"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1">

    <TextView android:text="@string/top_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/textView" />

    <Button style="@style/button"
        android:text="@string/project1"
        android:id="@+id/movie_btn"
        android:onClick="onClick" />

    <Button style="@style/button"
        android:text="@string/project2"
        android:id="@+id/scores_btn"
        android:onClick="onClick" />

    <Button style="@style/button"
        android:text="@string/project3"
        android:id="@+id/library_btn"
        android:onClick="onClick" />

    <Button style="@style/button"
        android:text="@string/project4"
        android:id="@+id/xyz_btn"
        android:onClick="onClick" />

    <Button style="@style/button"
        android:text="@string/project5"
        android:id="@+id/capstone_btn"
        android:background="@drawable/capstone"
        android:onClick="onClick" />

</LinearLayout>
